src/objects/VPM_VendorRequestDefaultValues__mdt.object
<CustomObject>
    <description>VPM - Used to store the default values for Vendor Requests to be applied based on Vendor Type, Commodity and Company Code data</description>
    <fields>
        <fullName>VPM_CSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPm- Used as definition attribute for applying default data on Vendor Requests</description>
        <label>CSB?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_CashManagementGroup__c</fullName>
        <description>VPM- Records the default value of &apos;Cash Management Group&apos; to be applied based on the definition attributes</description>
        <label>Cash Management Group</label>
        <picklist>
            <picklistValues>
                <fullName>C2000_UL Cust_Group Customers</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>C1000_Customer_Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1010_Risk Cust_Risk Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1000_Vendor RM_Vendors: RM &amp; Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1010_Vendor FG_Vendors: Finished Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1020_Vendor SE_Vendors: Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1030_Employees_Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1040_Taxes_Taxes &amp; social security due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1050_Vendor AS_Vendors: Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V2000_UL vendors_Group vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1_V-DOMESTIC_VENDOR-DOMESTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2_V-FOREIGN _VENDOR-FOREIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3_V-CONC DOM_VENDOR-CONCERN - DOMESTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4_V-CONC FOR_VENDOR-CONCERN - FOREIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A5_V-INSTITUT_VENDOR-INSTITUTIONS (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A6_V-TAXES_VENDOR-TAXES (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A7_V-EMPLOYEE_VENDOR-EMPLOYEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A8_V-STAND OR_VENDOR-STANDING ORDER (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A9_V-OTHERS_VENDOR-OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA_L-SHORT TE_LOANS-SHORT TERM LOANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB_L-LONG TER_LOANS-LONG TERM LOANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD_DEPOSITS_LOANS-DEPOSITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE_V-OIL DOM _VENDOR-OIL (DOMESTIC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF_V-OIL IMP _VENDOR-OIL (IMPORT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_V-INTERCOM_VENDOR- INTERCOMP (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK_V-TEA DOM_VENDOR-TEA (DOMESTIC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL_V-TEA IMP_VENDOR-TEA (IMPORT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM_V-MAR MEDI_VENDOR-MARKETING&amp;MEDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT_V-TRANSPOR_VENDOR-TRANSPORTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV_V-ONE TIME_VENDOR-ONE TIME VENDOR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CompanyCode__c</fullName>
        <description>VPM- Indicates the Company Code value used as one of the definition attributes for applying default values.</description>
        <label>Company Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_PaymentMethod__c</fullName>
        <description>VPM- Records the default value of &apos;Payment Method&apos; to be applied based on the definition attributes</description>
        <label>DELPayment Method</label>
        <picklist>
            <picklistValues>
                <fullName>0_NEFT-National Electr Fund Tran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1_TRFR-Fund Tran Fr HSBC To HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2_RTGS-Real TimeGross Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3_ACC - HSBC At Par Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4_CCC - UTI At Par Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5_IDD -DD Issu by HSBC On Oth Bk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6_DDP - Demand Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7_RMP - Remote DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8_ICO - Inter company order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B_E-Payment-Interbank Tr-ICICI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C_E-Payment - Cheques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D_E-Payment - Demand draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H_Foreign Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I_E-Payment-Interbank Tr - HDFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J_NEFT-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K_TRFR-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L_RTGS-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M_Cheque payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N_Demand draft Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T_Bank Transfer payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U_NEFT-T National Electr Fund Tr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V_TRFR-T Fund Tr Fr HSBC To HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W_RTGS-T Real Time Gr Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X_eTAX- Payment Method for DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Method 1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_ReconciliationAccount__c</fullName>
        <description>VPM- Records the default value of &apos;Reconciliation Account&apos; to be applied based on the definition attributes</description>
        <label>Reconciliation Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_SortKey__c</fullName>
        <description>VPM- Records the default value of &apos;Sort Key&apos; to be applied based on the definition attributes</description>
        <label>Sort Key</label>
        <picklist>
            <picklistValues>
                <fullName>000_Allocation number</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>001_Posting date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>002_Doc.no., fiscal year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>003_Document date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>004_Branch account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>005_Loc.currency amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>006_Doc.currency amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>007_Bill/exch.due date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>008_Cost center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>009_External doc.number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>010_Purchase order no.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>011_Plant number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012_Vendor number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>014_Purchase order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>015_Personnel number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>016_Settlement period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>017_Settl.per., pers.no.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>018_Asset number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>021_Segment text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>022_One-time name / city</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>023_One-time city / name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>024_Document header text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>025_CPU date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>026_Pmnt per.bslne date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>027_Value date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>028_Asset number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>029_Pstng month, vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>031_Customer number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>032_Pstng yr,month,curr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>033_Cost center</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_ToleranceGroup__c</fullName>
        <description>VPM- Records the default value of &apos;Tolerance Group&apos; to be applied based on the definition attributes</description>
        <label>Tolerance Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_VendorSubType__c</fullName>
        <description>VPM-  Used as a defintion attritbute for applying default data for Vendor Requests.</description>
        <label>Vendor Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_VendorType__c</fullName>
        <description>VPM- The types of Vendors to apply the default data. Part of the definition of default data.</description>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>MBS_Marketing Business Services_G001</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PI_Production Item Vendor_G001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRGT_Freight Vendor_G001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCT_Russian Customs Tax Vendor_G001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCS_Supply Chain Services_G001</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vendor Request Default Values</label>
    <pluralLabel>Vendor Request Default Values</pluralLabel>
</CustomObject>